--- a/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPOniKXeoV5FDp6v9UsNNSj",
+      "authorship_tag": "ABX9TyPV8my8zvzD9J3xg8Pav8pE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,28 +94,15 @@
         "from plots.chapter3 import *"
       ],
       "metadata": {
-        "id": "pgGfHWV5oZqU",
-        "outputId": "7f483abd-4c02-44af-98e5-2de5bbd79803",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "pgGfHWV5oZqU"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading files from GitHub repo to Colab...\n",
-            "Finished!\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!wget https://github.com/rahiakela/deep-learning-research-and-practice/raw/main/deep-learning-with-pytorch-step-by-step/networks/linear_regression.py"
+        "!wget https://github.com/rahiakela/deep-learning-research-and-practice/raw/main/deep-learning-with-pytorch-step-by-step/networks/trainer.py"
       ],
       "metadata": {
         "id": "W84boD_8VMQV"
@@ -139,12 +126,12 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import confusion_matrix, roc_curve, precision_recall_curve, auc\n",
         "\n",
-        "from linear_regression import LinearRegression"
+        "from trainer import Trainer"
       ],
       "metadata": {
         "id": "TUEV99bdogt_"
       },
-      "execution_count": 3,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -179,7 +166,7 @@
       "metadata": {
         "id": "7i8oVtQPpATN"
       },
-      "execution_count": 4,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -208,7 +195,7 @@
       "metadata": {
         "id": "6c8vMI5Kpn3Z"
       },
-      "execution_count": 5,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -218,13 +205,13 @@
       ],
       "metadata": {
         "id": "4VNwxL8XaoO7",
-        "outputId": "e934e727-f915-4c4f-be86-2be4418065d2",
+        "outputId": "d1d2547e-da39-442c-8a30-dbda075f9aac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 381
         }
       },
-      "execution_count": 6,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "display_data",
@@ -281,13 +268,13 @@
       "metadata": {
         "id": "x-rPHa6LRWuq"
       },
-      "execution_count": 7,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Logistic Regression Model"
+        "## Logit Fundamentals"
       ],
       "metadata": {
         "id": "4jQqdmSYTaHP"
@@ -399,7 +386,7 @@
       "metadata": {
         "id": "WeoEaGC9Tzxd"
       },
-      "execution_count": 8,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -412,12 +399,12 @@
       ],
       "metadata": {
         "id": "LO7taUG6r_44",
-        "outputId": "e19c5e52-403a-4d29-bce2-992f85502dd4",
+        "outputId": "efab786c-71f1-4b66-8144-f6540176b61d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -427,7 +414,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 47
         }
       ]
     },
@@ -438,13 +425,13 @@
       ],
       "metadata": {
         "id": "uc8zx220sSBT",
-        "outputId": "87ce5bc3-13aa-45c1-cd3e-610addd6eda0",
+        "outputId": "4a3bdd8d-6bb1-4bfe-f67f-75ca0141e04d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
         }
       },
-      "execution_count": 10,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "display_data",
@@ -490,7 +477,7 @@
       "metadata": {
         "id": "PRM1ZoHryMyF"
       },
-      "execution_count": 11,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -503,12 +490,12 @@
       ],
       "metadata": {
         "id": "8637euDzyYXl",
-        "outputId": "0bde74b6-bcf1-444a-8811-08f5bdde9bbb",
+        "outputId": "852e1629-dc32-418d-c1fe-3665e308d0f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,7 +505,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 50
         }
       ]
     },
@@ -538,13 +525,13 @@
       ],
       "metadata": {
         "id": "6BXgqRdLzydy",
-        "outputId": "7f1d1ed7-2cc0-420b-ab57-165078bae2e0",
+        "outputId": "baabbb93-f711-4811-fd41-6e96ff66e6a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
         }
       },
-      "execution_count": 13,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "display_data",
@@ -631,7 +618,7 @@
       "metadata": {
         "id": "0bpgUYQq-_EB"
       },
-      "execution_count": 14,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -644,12 +631,12 @@
       ],
       "metadata": {
         "id": "IxTcSuLg_K-t",
-        "outputId": "a0dc1c5e-3416-48eb-8a46-04295a91c705",
+        "outputId": "1f58df28-6015-423b-b878-fdd1d2a7acb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -659,7 +646,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 53
         }
       ]
     },
@@ -690,12 +677,12 @@
       ],
       "metadata": {
         "id": "yRrjgkAJAUX-",
-        "outputId": "0c227123-9b92-4714-985d-ecce039a43fa",
+        "outputId": "05ac0de4-3472-48c4-fcfc-ac951f7d882f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +692,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 54
         }
       ]
     },
@@ -716,13 +703,13 @@
       ],
       "metadata": {
         "id": "VTKOWXVZA5dG",
-        "outputId": "751cd784-1958-4e53-dd0b-3fe4ebec87fe",
+        "outputId": "f22f9ec2-ac5c-4ad2-e01f-cfa47f1d8eea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
         }
       },
-      "execution_count": 17,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "display_data",
@@ -775,12 +762,12 @@
       ],
       "metadata": {
         "id": "fTXmjqiW7aB2",
-        "outputId": "16e46070-b861-45c4-d31b-77fa188ad737",
+        "outputId": "7f39384f-53eb-4b69-f9c1-d923bf18e66c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -939,12 +926,12 @@
       ],
       "metadata": {
         "id": "KH8sBUKjZFuZ",
-        "outputId": "f418a760-7a0e-4bc8-ffd0-ece8277b3437",
+        "outputId": "b458dd1b-2349-4e3d-bd55-a07da71a3b67",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -954,7 +941,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 57
         }
       ]
     },
@@ -989,12 +976,12 @@
       ],
       "metadata": {
         "id": "ywuj3tIPb78E",
-        "outputId": "9ee0f066-9215-4251-e6c5-bad79c49ef8a",
+        "outputId": "c411a744-da05-4314-904a-7b9ca59644a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1004,7 +991,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 58
         }
       ]
     },
@@ -1049,12 +1036,12 @@
       ],
       "metadata": {
         "id": "7KGimSc7i5mq",
-        "outputId": "8a0ad6c7-9adf-4cb2-b73a-426fae6fcea9",
+        "outputId": "5fb73791-41b0-4af1-92f2-35ec6561a35b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1064,7 +1051,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 59
         }
       ]
     },
@@ -1095,12 +1082,12 @@
       ],
       "metadata": {
         "id": "kqzsESKSjLye",
-        "outputId": "938f95cb-01c5-4e96-ca86-0f2653eb4454",
+        "outputId": "9f825677-1dc8-4d0f-db07-44aadcea61cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -1143,12 +1130,12 @@
       ],
       "metadata": {
         "id": "BLlWQOoUmB_c",
-        "outputId": "fc1e034c-ad40-4a06-b37a-b79387e85699",
+        "outputId": "a4c925ff-177b-4193-ce89-18a1577c6bd1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1158,7 +1145,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 61
         }
       ]
     },
@@ -1183,12 +1170,12 @@
       ],
       "metadata": {
         "id": "jYFkQVuemgYv",
-        "outputId": "60f21c86-1cf9-416a-8373-306251abcc52",
+        "outputId": "95f475a3-0253-4bf8-d803-13ed2a55fbbb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
@@ -1216,12 +1203,12 @@
       ],
       "metadata": {
         "id": "4MeIh-J5m9cr",
-        "outputId": "a691c51f-0ca1-475a-8be3-3d652259288a",
+        "outputId": "eafe8fe8-8b82-4732-beb7-f7682cd8af8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1231,7 +1218,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 63
         }
       ]
     },
@@ -1276,7 +1263,7 @@
       "metadata": {
         "id": "p8DLmSIcp_gV"
       },
-      "execution_count": 26,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -1313,12 +1300,12 @@
       ],
       "metadata": {
         "id": "v55nZdz7sBja",
-        "outputId": "284d6e8c-1c06-4e99-e1d7-b22d050105d9",
+        "outputId": "d3074430-09ad-46b6-e05e-94f77b05df20",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1328,7 +1315,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 65
         }
       ]
     },
@@ -1350,7 +1337,7 @@
       "metadata": {
         "id": "4fb9Khd2qq2e"
       },
-      "execution_count": 28,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -1371,12 +1358,12 @@
       ],
       "metadata": {
         "id": "QbaYltajs1KL",
-        "outputId": "7b79a67d-a917-47b4-a168-cdd7866e6d7f",
+        "outputId": "e19452cb-4557-4598-de1c-f1f0f9df1f12",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1386,7 +1373,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 67
         }
       ]
     },
@@ -1435,12 +1422,12 @@
       ],
       "metadata": {
         "id": "ahWYmlyktqJt",
-        "outputId": "db8cd868-97b1-450d-f35c-bc0dc1ede839",
+        "outputId": "89c794f1-1853-45d0-aa86-f9286f3b04e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1450,14 +1437,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 68
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "##Model Configuration"
+        "##Model Training"
       ],
       "metadata": {
         "id": "PNhxGMl0uNih"
@@ -1465,10 +1452,79 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Let’s define a model\n",
+        "that produces logits and use `BCEWithLogitsLoss` as the loss function."
+      ],
       "metadata": {
         "id": "UEvR8G2zuOdD"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Sets learning rate\n",
+        "lr = 0.1\n",
+        "\n",
+        "torch.manual_seed(42)\n",
+        "\n",
+        "model = nn.Sequential()\n",
+        "model.add_module(\"linear\", nn.Linear(2, 1))\n",
+        "\n",
+        "# Defines a SGD optimizer to update the parameters\n",
+        "optimizer = optim.SGD(model.parameters(), lr=lr)\n",
+        "\n",
+        "# Defines a BCE with logits loss function\n",
+        "loss_fn = nn.BCEWithLogitsLoss()"
+      ],
+      "metadata": {
+        "id": "dxrqtJh5y02C"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's train our model\n",
+        "n_epochs = 100\n",
+        "\n",
+        "trainer = Trainer(model, loss_fn, optimizer)\n",
+        "trainer.set_loaders(train_loader, val_loader)\n",
+        "trainer.train(n_epochs)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 367
+        },
+        "id": "HBJiahVm1Y_-",
+        "outputId": "e7489e64-c292-42f8-bc53-a4107da7bf52"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-70-31c833c59562>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mn_epochs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtrainer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTrainer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mtrainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_loaders\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_loader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtrainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_epochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/content/trainer.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, model, loss_fn, optimizer)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mTrainer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "j8OYa5xf11co"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
