--- a/inside-deep-learing/08-object-detection/02_object_detection.ipynb
+++ b/inside-deep-learing/08-object-detection/02_object_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPZHMWP1ap5Bdyw4e7j7Pnt",
+      "authorship_tag": "ABX9TyP8v7r847GCoUr9Mes3/LIQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -202,11 +202,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We will use data from the 2018 Data\n",
-        "Science Bowl (https://www.kaggle.com/c/data-science-bowl-2018). \n",
-        "\n",
-        "The goal of this competition was to detect nuclei of cells and their respective sizes. But we will just\n",
-        "segment the image for now."
+        "Our toy dataset will be a larger `100x100`\n",
+        "image containing a random number of\n",
+        "MNIST digits in random locations. The goal will be to detect where these images are and classify them correctly."
       ],
       "metadata": {
         "id": "xcWc0zUpV7wt"
@@ -215,90 +213,63 @@
     {
       "cell_type": "code",
       "source": [
-        "!mkdir data\n",
-        "!mkdir stage1_train"
-      ],
-      "metadata": {
-        "id": "26-cbRF79a6b"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data_url_zip = \"https://github.com/kamalkraj/DATA-SCIENCE-BOWL-2018/blob/master/data/stage1_train.zip?raw=true\"\n",
-        "\n",
-        "# Download this dataset if we have not already done so\n",
-        "if not os.path.isdir(\"./data/stage1_train\"):\n",
-        "  response = urlopen(data_url_zip)\n",
-        "  os.mkdir(\"./data/stage1_train\")\n",
-        "  zipfile = ZipFile(BytesIO(response.read()))\n",
-        "  zipfile.extractall(path=\"./data/stage1_train\")\n",
-        "\n",
-        "# Grab all the paths to the images we just unziped \n",
-        "paths = glob(\"./data/stage1_train/*\")"
-      ],
-      "metadata": {
-        "id": "iQy_V8L791sw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Next we create 2018 Data Science Bowl dataset."
-      ],
-      "metadata": {
-        "id": "lPPst1w07LZ2"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class Bowl2018Dataset(Dataset):\n",
+        "class Class2Detect(Dataset):\n",
         "  \"\"\"\n",
-        "  Dataset class for the 2018 Data Science Bowl.\n",
+        "  This class is used to create a simple converstion of a dataset from a classification problem, to a detection problem.\n",
         "  \"\"\"\n",
-        "  def __init__(self, paths):\n",
+        "  def __init__(self, dataset, toSample=3, canvas_size=100):\n",
         "    \"\"\"\n",
-        "    paths: a list of paths to every image folder in the dataset\n",
+        "    dataset: the source dataset to sample items from as the \"objects\" to detect\n",
+        "    toSample: the maximum number of \"objects\" to put into any image\n",
+        "    canvas_size: the width and height of the images to place objects inside of.\n",
         "    \"\"\"\n",
-        "    self.paths = paths\n",
+        "    self.dataset = dataset\n",
+        "    self.toSample = toSample \n",
+        "    self.canvas_size = canvas_size \n",
         "\n",
         "  def __len__(self):\n",
-        "    return len(self.paths)\n",
+        "    return len(self.dataset)\n",
         "\n",
         "  def __getitem__(self, idx):\n",
-        "    # There is only one image in each images path. So we will grab the \"first\" thing we find with \"[0]\" at the end\n",
-        "    img_path = glob(self.paths[idx] + \"/images/*\")[0]\n",
-        "    # but there are multiple mask images in each mask path\n",
-        "    mask_imgs = glob(self.paths[idx] + \"/masks/*\")\n",
-        "    # the image shape is (W, H, 4), the last dimension is an 'alpha' channel that is not used\n",
-        "    img = imread(img_path)[:, :, 0:3]  # trim off the alpha so we get (W, H, 3)\n",
-        "    # Now we want this as (3, W, H), which is the normal shape for PyTorch\n",
-        "    img = np.moveaxis(img, -1, 0)\n",
-        "    # Last step for the image, re-scale it to the range [0, 1]\n",
-        "    img = img / 255.0\n",
+        "    boxes = []\n",
+        "    labels = []\n",
+        "    final_size = self.canvas_size\n",
         "\n",
-        "    # Every mask image is going to have a shape of (W, H) which has a value of 1 if the pixel is of a nuclei, and a value of 0 if the image is background\n",
-        "    masks = [imread(f) / 255.0 for f in mask_imgs]\n",
+        "    # First, create a larger image that will store all the \"objects\" to detect\n",
+        "    img_path = torch.zeros((final_size, final_size), dtype=torch.float32)\n",
+        "    \n",
+        "    # Now we are going to sample up to self.toSample objects to place into the image\n",
+        "    for _ in range(np.random.randint(1, self.toSample + 1)):\n",
+        "      # Pick an object at random from the original dataset, and its label\n",
+        "      img, label = self.dataset[np.random.randint(0, len(self.dataset))]\n",
+        "      # Get the height and width of that image\n",
+        "      _, img_h, img_w = img.shape\n",
+        "      # Pick a random offset of the x and y axis, essentially placing the image at a random location\n",
+        "      offsets = np.random.randint(0, final_size - np.max(img.shape), size=(4,))\n",
+        "      # Change the padding at the end to make sure we come out to a specific 100,100 shape\n",
+        "      offsets[1] = final_size - img.shape[1] - offsets[0]\n",
+        "      offsets[3] = final_size - img.shape[2] - offsets[2]\n",
         "\n",
-        "    # Since we want to do simple segmentation, we will create one final mask that contains _all_ nuclei pixels from _every_ mask\n",
-        "    final_mask = np.zeros(masks[0].shape)\n",
-        "    for m in masks:\n",
-        "      final_mask = np.logical_or(final_mask, m)\n",
-        "    final_mask = final_mask.astype(np.float32)\n",
+        "      with torch.no_grad():\n",
+        "        img_p = img_p + F.pad(img, tuple(offsets))\n",
         "\n",
-        "    # Not every image in the dataset is the same size.  To simplify the problem, we are going to re-size  every image to be (256, 256)\n",
-        "    img, final_mask = torch.tensor(img), torch.tensor(final_mask).unsqueeze(0) # First we convert to PyTorch tensors\n",
-        "    # The interpolate function can be used to re-size a batch of images. So we make each image a \"batch\" of 1\n",
-        "    img = F.interpolate(img.unsqueeze(0), (256, 256))\n",
-        "    final_mask = F.interpolate(final_mask.unsqueeze(0), (256, 256))\n",
-        "    # Now the shapes  are (B=1, C, W, H) We need to convert them back to FloatTensors and grab the first item in the \"batch\". \n",
-        "    # This will return a tuple of: (3, 256, 256), (1, 256, 256)\n",
-        "    return img.type(torch.FloatTensor)[0], final_mask.type(torch.FloatTensor)[0]"
+        "      # Lets craete the values for the \"boxes\", all of these are in absolute pixel locations\n",
+        "      # x_min determined by the randomly selected offset\n",
+        "      xmin = offsets[0]\n",
+        "      # x_max is the offset plus the image's width\n",
+        "      xmax = offsets[0] + img_w\n",
+        "      # y min/max follows the same pattern\n",
+        "      ymin = offsets[2]\n",
+        "      ymax = offsets[2] + img_h\n",
+        "      # now we add to the box with the right label\n",
+        "      boxes.append([xmin, ymin, xmax, ymax])\n",
+        "      labels.append(label)\n",
+        "\n",
+        "    target = {}\n",
+        "    target[\"boxes\"] = target.as_tensor(boxes, dtype=torch.float32)\n",
+        "    target[\"labels\"] = target.as_tensor(labels, dtype=torch.int64)\n",
+        "    \n",
+        "    return img_p, target"
       ],
       "metadata": {
         "id": "rsFqIimT7L9B"
