--- a/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP0rMBWowfLsA+niPLQHP92",
+      "authorship_tag": "ABX9TyO1V6pVs4IqFDyBnuii0W0W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,7 +100,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "TUEV99bdogt_"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
       "metadata": {
         "id": "7i8oVtQPpATN"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -208,7 +208,7 @@
       "metadata": {
         "id": "6c8vMI5Kpn3Z"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
           "height": 381
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -281,7 +281,7 @@
       "metadata": {
         "id": "x-rPHa6LRWuq"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
       "metadata": {
         "id": "WeoEaGC9Tzxd"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -417,7 +417,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,11 +440,10 @@
         "id": "uc8zx220sSBT",
         "outputId": "39d4bf28-0578-49bd-a957-6da04d85ff9b",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -490,7 +489,7 @@
       "metadata": {
         "id": "PRM1ZoHryMyF"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -508,7 +507,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -540,11 +539,10 @@
         "id": "6BXgqRdLzydy",
         "outputId": "25cca110-6eb4-4f3f-e523-bb287f1afaa9",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -631,7 +629,7 @@
       "metadata": {
         "id": "0bpgUYQq-_EB"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -649,7 +647,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -695,7 +693,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -718,11 +716,10 @@
         "id": "VTKOWXVZA5dG",
         "outputId": "d2f83eb9-c8a2-4f50-b3a3-7e16976df910",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -780,7 +777,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -944,7 +941,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -994,7 +991,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1054,7 +1051,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1100,7 +1097,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1148,7 +1145,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1188,7 +1185,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1221,7 +1218,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1276,7 +1273,7 @@
       "metadata": {
         "id": "p8DLmSIcp_gV"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1318,7 +1315,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1350,7 +1347,7 @@
       "metadata": {
         "id": "4fb9Khd2qq2e"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1376,7 +1373,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1440,7 +1437,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1493,7 +1490,7 @@
       "metadata": {
         "id": "dxrqtJh5y02C"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1509,7 +1506,7 @@
       "metadata": {
         "id": "HBJiahVm1Y_-"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1525,7 +1522,7 @@
           "height": 289
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1552,7 +1549,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1602,7 +1599,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1645,7 +1642,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1724,7 +1721,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1788,7 +1785,7 @@
       "metadata": {
         "id": "e1j1UHc1jkfg"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1813,7 +1810,7 @@
           "height": 257
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1854,7 +1851,7 @@
           "height": 145
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1910,7 +1907,7 @@
           "height": 145
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1950,7 +1947,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1970,10 +1967,79 @@
       "source": [
         "There are three misclassified\n",
         "points: one false negative and two false positives.\n",
+        "\n",
+        "There is one more thing I hope you noticed already: the confusion matrix depends\n",
+        "on the threshold. If you shift the threshold along the probability line, you’ll end up\n",
+        "changing the number of points in each quadrant.\n",
+        "\n",
+        "There are many confusion matrices, one for each threshold.\n",
+        "\n",
+        "Moreover, different confusion matrices mean different metrics. We need the\n",
+        "individual components of the confusion matrix, namely, TN, FP, FN, and TP, to\n",
+        "construct those metrics. \n",
+        "\n",
+        "The function below splits the confusion matrix\n",
+        "accordingly:\n",
         "\n"
       ],
       "metadata": {
         "id": "PEOFqUGjorwO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def split_cm(cm):\n",
+        "  # Actual negatives go in the top row, above the probability line\n",
+        "  actual_negative = cm[0]\n",
+        "\n",
+        "  # Predicted negatives go in the first column\n",
+        "  tn = actual_negative[0]\n",
+        "\n",
+        "  # Predicted positives go in the second column\n",
+        "  fp = actual_negative[1]\n",
+        "\n",
+        "  # Actual positives go in the bottow row, below the probability line\n",
+        "  actual_positive = cm[1]\n",
+        "\n",
+        "  # Predicted negatives go in the first column\n",
+        "  fn = actual_positive[0]\n",
+        "\n",
+        "  # Predicted positives go in the second column\n",
+        "  tp = actual_positive[1]\n",
+        "\n",
+        "  return tn, fp, fn, tp"
+      ],
+      "metadata": {
+        "id": "FXzbEY-_0-cX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Metrics"
+      ],
+      "metadata": {
+        "id": "Jb4dCcpe2Aeb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Starting with these four numbers, TN, FP, FN, and TP, you may construct a ton of\n",
+        "metrics. \n",
+        "\n",
+        "We’re focusing here on the most commonly used: True and False Positive\n",
+        "Rates (TPR and FPR), precision, recall, and accuracy.\n",
+        "\n",
+        "$$\n",
+        "\\Large \\text{TPR} = \\frac{\\text{TP}}{\\text{TP + FN}} \\ \\ \\  \\text{FPR} = \\frac{\\text{FP}}{\\text{FP + TN}}\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "SxLjd6iK2BRE"
       }
     }
   ]
