--- a/inside-deep-learing/08-object-detection/02_object_detection.ipynb
+++ b/inside-deep-learing/08-object-detection/02_object_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPaVPK0JKyHQA25SL39vedJ",
+      "authorship_tag": "ABX9TyMfax2SrXfndJScoWzjjWqP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,7 +143,7 @@
       "metadata": {
         "id": "_9xoD7-8EibG"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,7 +157,7 @@
       "metadata": {
         "id": "z5hKfJzr1v0x"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "8U1JNhEmEkzG"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -187,7 +187,7 @@
       "metadata": {
         "id": "nXiYSSxO707X"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -274,7 +274,7 @@
       "metadata": {
         "id": "rsFqIimT7L9B"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -295,7 +295,7 @@
       "metadata": {
         "id": "UalbRpysEpji"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -330,7 +330,7 @@
       "metadata": {
         "id": "6w8NL9Qsrwc-"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +341,7 @@
       "metadata": {
         "id": "SosIhpxes8xQ"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -360,7 +360,7 @@
           "height": 286
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -405,7 +405,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,9 +443,9 @@
     {
       "cell_type": "code",
       "source": [
-        "C = 3         # How many channels are in the input?\n",
-        "n_filters = 32  # Smallest value of filters should usually be considered. If we wanted to try and optimize the architecture we could use Optuna to pick a better number of filters. \n",
-        "loss_func = nn.BCEWithLogitsLoss()  # BCE loss implicitly assumes a binary problem"
+        "C = 1           # How many channels are in the input?\n",
+        "classes = 10    # How many classes are there? \n",
+        "n_filters = 32  # How many filters in our backbone"
       ],
       "metadata": {
         "id": "_WbqbWoTMYWx"
@@ -456,13 +456,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Because we need to make predictions for every pixel, our network’s output `f(.)` must\n",
-        "have a shape with the same height and width as our original inputs.\n",
-        "\n",
-        "The easiest way to keep the sameW and H values is to never use pooling and to always\n",
-        "use padding so the output is the same size as the input.\n",
-        "\n",
-        "Let's incorporates both of these choices into a simple neural network."
+        "Let's build a small backbone network to use."
       ],
       "metadata": {
         "id": "DmCQLUs7QvYE"
@@ -471,43 +465,41 @@
     {
       "cell_type": "code",
       "source": [
-        "def cnn_layer(in_filters, out_filters, kernel_size=3):\n",
-        "  \"\"\"\n",
-        "  in_filters: how many channels are in the input to this layer\n",
-        "  out_filters: how many channels should this layer output\n",
-        "  kernel_size: how large should the filters of this layer be\n",
-        "  \"\"\"\n",
-        "  padding = kernel_size // 2\n",
-        "  return nn.Sequential(\n",
-        "    nn.Conv2d(in_filters, out_filters, kernel_size, padding=padding),\n",
-        "    nn.BatchNorm2d(out_filters),\n",
-        "    nn.LeakyReLU()\n",
-        "  )"
-      ],
-      "metadata": {
-        "id": "0iO3ny15RC8V"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Specifying a model for image segmentation\n",
-        "segmentation_model = nn.Sequential(\n",
-        "  # First layer changes number of channels up to the large numer\n",
+        "backbone = nn.Sequential(\n",
         "  cnn_layer(C, n_filters),\n",
-        "  # Create 5 more hidden layers\n",
-        "  *[cnn_layer(n_filters, n_filters) for _ in range(5)],\n",
-        "  # Make a prediction for every location. Notice we use 1 channel out, since we have a binary problem and are using BCEWithLogitsLoss as our loss function. \n",
-        "  nn.Conv2d(n_filters, 1, (3, 3), padding=1)  # Shape is now (1, W, H)\n",
-        ")"
+        "  cnn_layer(n_filters, n_filters),\n",
+        "  cnn_layer(n_filters, n_filters),\n",
+        "  nn.MaxPool2d((2, 2)),\n",
+        "\n",
+        "  cnn_layer(n_filters, 2 * n_filters),\n",
+        "  cnn_layer(2 * n_filters, 2 * n_filters),\n",
+        "  cnn_layer(2 * n_filters, 2 * n_filters),\n",
+        "  nn.MaxPool2d((2, 2)),\n",
+        "\n",
+        "  cnn_layer(2 * n_filters, 4 * n_filters),\n",
+        "  cnn_layer(4 * n_filters, 4 * n_filters),\n",
+        ")\n",
+        "\n",
+        "# Let Faster RCNN know exactly how many output channels to expect\n",
+        "backbone.out_channels = n_filters * 4"
       ],
       "metadata": {
         "id": "8HIiIgjPTfoU"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we can define our Faster R-CNN model. We give it the backbone network and\n",
+        "tell it how many classes exist and how to normalize the image.\n",
+        "\n",
+        "We also tell Faster R-CNN the minimum and maximum image sizes."
+      ],
+      "metadata": {
+        "id": "Q9We3_5VHiwB"
+      }
     },
     {
       "cell_type": "code",
